<resources>
    <string name="app_name">Money Exchange</string>
    <string name="exchange_money_title">CAMBIO DE MONEDAS</string>
    <string name="money_to_convert">MONEDA INICIAL</string>
    <string name="convert_dolar">DOLAR</string>
    <string name="convert_euro">EURO</string>
    <string name="convert_cop">COP</string>
    <string name="money_converted">MONEDA FINAL</string>
    <string name="cambio_moneda">CONVERTIR</string>
    <string name="value_input">Ingrese el monto</string>
    <string name="required_field">Campo obligatorio</string>
    <string name="exchange_b">CAMBIO</string>
    <string name="result_exchange">Resultado</string>
    <string name="warning_quantity">Ingresar cantidad</string>
    <string name="dif_coin">Revise que las monedas sean diferentes y que no hayan campos vacios</string>
    <string name="cop_plural">PESOS</string>
    <string name="dolar_plural">DOLARS</string>
    <string name="euro_plural">EUROS</string>
    <string name="result">RESULTADO:</string>
</resources>