<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/exchange_money_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/exchange_money_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/money_to_convert_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/money_to_convert"
        android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/money_to_convert_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/convert_dolar_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/convert_dolar" />

        <RadioButton
            android:id="@+id/convert_euro_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/convert_euro" />

        <RadioButton
            android:id="@+id/convert_cop_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/convert_cop" />
    </RadioGroup>

    <TextView
        android:id="@+id/money_converted_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/money_converted"
        android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/money_converted_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/converted_dolar_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/convert_dolar" />

        <RadioButton
            android:id="@+id/converted_euro_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/convert_euro" />

        <RadioButton
            android:id="@+id/converted_cop_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/convert_cop" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/value_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:helperText="@string/required_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/value_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:hint="@string/value_input"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/exhange_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/exchange_b" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/result_exchange"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>